Add percentage calculation button

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <div class="display" id="display">0</div>
         <div class="buttons">
             <button onclick="clearDisplay()">C</button>
+            <button onclick="calculatePercentage()">%</button>
             <button onclick="appendToDisplay('/')">/</button>
             <button onclick="appendToDisplay('*')">*</button>
             <button onclick="deleteLast()">←</button>
